--- a/index.html
+++ b/index.html
@@ -6,9 +6,11 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Document</title>
+    <link rel='icon' href='assets/images/favicon-96x96.png' type='image/x-icon'>
     <link rel="stylesheet" href="assets/stylesheets/bootstrap.min.css">
     <link href="assets/fonts/genericons/genericons.css" rel="stylesheet">
     <link rel="stylesheet" href="assets/stylesheets/main.css">
+    
 </head>
 
 <body>
