Validator errors fixes

--- a/index.html
+++ b/index.html
@@ -47,14 +47,14 @@
                     <button class="navbar-toggler second-button" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent23" aria-controls="navbarSupportedContent23"
                         aria-expanded="false" aria-label="Toggle navigation">
-                        <div class="animated-icon2"><span></span><span></span><span></span><span></span></div>
+                        <span class="animated-icon2"><span></span><span></span><span></span><span></span></span>
                     </button>
                 </div>
             </div>
 
             <div class="header-middle">
                 <a href="#" class="brand">
-                    <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                    <svg version="1.1" id="layer_1_1" xmlns="http://www.w3.org/2000/svg"
                         xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.6 60"
                         style="enable-background:new 0 0 395.6 60;" xml:space="preserve">
                         <g>
@@ -66,7 +66,7 @@
                 </a>
             </div>
 
-            <nav class="header-bottom collapse navbar-collapse" id="navbarSupportedContent23">
+            <nav class="header-bottom collapse navbar-collapse">
                 <div class="flex-md justify-content-center navbar-nav">
                     <form action="search">
                         <label>Search</label>
@@ -1978,7 +1978,7 @@
             <div class="flex-sm justify-content-between align-items-end">
                 <div class="flex-sm align-items-end">
                     <a href="#" class="brand">
-                        <svg version="1.1" id="Layer_1" xmlns="http://www.w3.org/2000/svg"
+                        <svg version="1.1" id="Layer_1_2" xmlns="http://www.w3.org/2000/svg"
                             xmlns:xlink="http://www.w3.org/1999/xlink" x="0px" y="0px" viewBox="0 0 395.6 60"
                             style="enable-background:new 0 0 395.6 60;" xml:space="preserve">
                             <g>
