Toggler button fixes

--- a/index.html
+++ b/index.html
@@ -44,10 +44,10 @@
                         </svg>
                     </a>
                     <!-- Collapse button -->
-                    <button class="navbar-toggler second-button" type="button" data-toggle="collapse"
+                    <button class="navbar-toggler second-button animated-icon2" type="button" data-toggle="collapse"
                         data-target="#navbarSupportedContent23" aria-controls="navbarSupportedContent23"
                         aria-expanded="false" aria-label="Toggle navigation">
-                        <span class="animated-icon2"><span></span><span></span><span></span><span></span></span>
+                    <span></span><span></span><span></span><span></span>
                     </button>
                 </div>
             </div>
